# WhatsApp-bridge

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: nightly-deps.yml
bridge/: Dockerfile  go.mod  go.sum  main.go
bridge/api/: handlers_chats.go  handlers_contacts.go  handlers_daily.go  handlers_download.go  handlers_groups.go  handlers_health.go  handlers_links.go  handlers_messages.go  handlers_send.go  handlers_telemetry.go  helpers.go  jid.go  ratelimit.go  server.go  types.go  validation.go
bridge/client/: client.go  events.go
bridge/config/: config.go
bridge/connection/: keepalive.go  manager.go  state.go
bridge/indexer/: links.go  links_test.go
bridge/media/: ogg.go  transcribe.go
bridge/mediaretry/: mediaretry.go  mediaretry_test.go
bridge/store/: chats.go  contacts.go  daily_summaries.go  db.go  links.go  messages.go  messages_media_test.go  migrations.go  migrations_pg.go  polls.go  reactions.go  telemetry.go  writer.go
dashboard/: Dockerfile  pyproject.toml
dashboard/src/whatsapp_dashboard/: app.py  db.py
dashboard/src/whatsapp_dashboard/templates/: index.html
dashboard/src/whatsapp_dashboard/templates/partials/: messages.html  status.html  telemetry.html
docs/: TESTING.md
embedder/: Dockerfile  pyproject.toml
embedder/src/whatsapp_embedder/: worker.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/whatsapp_mcp/: bridge_client.py  main.py  server.py
mcp-server/src/whatsapp_mcp/tools/: __init__.py  contacts.py  groups.py  media.py  messages.py  search.py
migrations/: 010_lid_to_phone.sql
scripts/: install-service.sh  migrate_to_postgres.py  retranscribe.py  start.sh  stop.sh
transcriber/: Dockerfile  pyproject.toml
transcriber/src/whatsapp_transcriber/: worker.py
