[project]
name = "whatsapp-mcp"
version = "1.0.0"
description = "WhatsApp MCP server — thin stdio layer over Go bridge"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.optional-dependencies]
search = [
    "psycopg2-binary>=2.9",
    "sentence-transformers>=3.0",
]

[project.scripts]
whatsapp-mcp = "whatsapp_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_mcp"]
