[project]
name = "whatsapp-transcriber"
version = "0.1.0"
description = "Transcription worker for WhatsApp Bridge - transcribes voice notes via Whisper"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]

[project.scripts]
whatsapp-transcriber = "whatsapp_transcriber.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_transcriber"]
